--- a/index.css
+++ b/index.css
@@ -5,19 +5,38 @@ body {
 }
 
 header {
-  background-color: blue;
+  background-color: ivory;
   height: 100%;
   width: 100%;
+  color: brown;
 }
 
 main {
-  background-color: white;
+   display:flex;
+  background-color: turquoise ;
   width: 100%;
   height: 100%;
+ flex-flow: row  wrap;
+ justify-content: space-around;
+ align-items: center;
 }
 
 footer {
+   display:flex;
   background-color: red;
   height: 100%;
   width: 100%;
+}
+
+.flex-container {
+  display:flex;
+  width:100vw;
+  height:100vh;
+  flex-direction:column;
+}
+.item {
+  height: 50px;
+  width: 120px;
+  margin: 5px;
+  background-color: #FCF2EC;
 }
